testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_multi_line_string/case1.expect.out
error: unterminated multi-line string
  ==> case1.cj:14:13:
   | 
14 |     var i = """
   |             ^^^^ unterminated multi-line string
   | 

1 error generated, 1 error printed.
